hphp/test/slow/nullsafe/nullsafe-prop-15.php.expectf
Fatal error: ?-> can only be used with scalar property names in %s on line 6
